delete DTO's folder

--- a/journey-control/journey-control.csproj
+++ b/journey-control/journey-control.csproj
@@ -10,8 +10,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="DTOs\**" />
+    <EmbeddedResource Remove="DTOs\**" />
+    <None Remove="DTOs\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Folder Include="Controllers\" />
-    <Folder Include="DTOs\" />
   </ItemGroup>
 
   <ItemGroup>
