--- a/journey_control/journey_control.csproj
+++ b/journey_control/journey_control.csproj
@@ -1,6 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+	<AssemblyName>Controle de Jornada</AssemblyName>
 	<Version>1.0.0.0</Version>
     <OutputType>WinExe</OutputType>
     <TargetFramework>net8.0-windows</TargetFramework>
